--- a/Veterinaria/Veterinaria.Web/Views/Home/Contact.cshtml
+++ b/Veterinaria/Veterinaria.Web/Views/Home/Contact.cshtml
@@ -1,17 +1,27 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+    <div class="masthead, display1">
+        <img src="~/Content/img/dog-3175810.jpg" alt="cat" class="foto" />
+        <div class="masthead-content">
+            <div class="container">
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
 
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+
+                <div class="palabras2">
+                    <address>
+                        <strong>Veterinaria TJ</strong> <br />
+                        Av Castillo de Chapultepec 562<br />
+                        <abbr title="Telefono">Telefono:</abbr>
+                        664 607 9999
+                    </address>
+                    <address>
+                        <strong>Atención:</strong>   <a href="">soporte@veterinariatj.com</a><br />
+                    </address>
+
+                </div>
+
+                <p class="palabras">Para cualquier  asesoría, duda o aclaración, comunicarse con el Coordinador de Bienes y Suministros, Rodrigo Murguia.</p>
+            </div>
+        </div>
+    </div>
