--- a/Veterinaria/Veterinaria.Web/Views/Home/Index.cshtml
+++ b/Veterinaria/Veterinaria.Web/Views/Home/Index.cshtml
@@ -2,30 +2,39 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<div>
+    <div class="display1 space">
+        <h1 class="display-1">Veterinaria TJ</h1>
+    </div>
+    <img src="~/Content/img/american-bully-2735008.jpg" alt="Concierto" class="foto" />
+    <div>
+
+        <div class="card-group">
+            <div class="card">
+                <img src="~/Content/img/geese-5046359.jpg" class="card-img-top" alt="foto">
+                <div class="card-body">
+                    <h5 class="card-title">Nuestra misión</h5>
+                    <p class="card-text">Nuestra misión es ofrecer bienestar ,tanto a sus mascotas como a las familias de nuestros pacientes ,entregando servicios Médicos de gran calidad. </p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="~/Content/img/discus-fish-1943755.jpg" class="card-img-top" alt="foto">
+                <div class="card-body">
+                    <h5 class="card-title">Nuestra Visión</h5>
+                    <p class="card-text">Brindarle a cada familia la oportunidad de encontrar nuestra calidad médica tan cerca como sea posible, sin importar en qué lugar se encuentre.</p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="~/Content/img/raccoon-3538081_1920.jpg" class="card-img-top" alt="foto">
+                <div class="card-body">
+                    <h5 class="card-title">Nuestro Objetivo</h5>
+                    <p class="card-text">Entregar el mejor servicio médico veterinario a cada uno de nuestros pacientes para asegurarnos de que pasen más tiempo con ustedes, en su hogar. </p>
+                </div>
+            </div>
+        </div>
+
+    </div>
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+
+
