--- a/Veterinaria/Veterinaria.Web/Views/Principal/Index.cshtml
+++ b/Veterinaria/Veterinaria.Web/Views/Principal/Index.cshtml
@@ -2,70 +2,38 @@
 @{
     ViewBag.Title = "Index";
 }
-<div>
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="d-block w-100" src="~/Content/img/catdog.jpg" alt="First slide">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="~/Content/img/pug.jpg" alt="Second slide">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="~/Content/img/cats.jpg" alt="Third slide">
-            </div>
+    <div>
+        <div class="display1 space">
+            <h1 class="display-1">Veterinaria TJ</h1>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
-</div>
-<div class="row justify-content-center m-4">
-    <div class="col-md-4">
-        <div class="card mb-4">
-            <div class="card-header bg-info">
-                <h5 class="text-white">Mejor Atención</h5>
-            </div>
-            <div class="card-body">
-                <p>Estamos certificados para realizar cirugías en gatos y perros.</p>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-4">
-        <div class="card mb-4">
-            <div class="card-header bg-info">
-                <h5 class="text-white">Todo Acerca de su mascota</h5>
-            </div>
-            <div class="card-body">
-                <p>
-                    Ante algún cambio que consideres anormal en tu mascota no dudes en acudir con
-                    los expertos para su valoración.
-                </p>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-4">
-        <div class="card mb-4">
-            <div class="card-header bg-info">
-                <h5 class="text-white">Consulta Personalizada</h5>
-            </div>
-            <div class="card-body">
-                <p>Duración variable • Precio variable</p>
-                <p>
-                    Le brindamos a tu mascota la mejor atención durante su consulta.
-                    Se sentirá cómodo y en confianza.
-                </p>
-            </div>
-        </div>
-    </div>
-</div>
+        <img src="~/Content/img/american-bully-2735008.jpg" alt="Concierto" class="foto" />
+        <div>
 
+            <div class="card-group">
+                <div class="card">
+                    <img src="~/Content/img/geese-5046359.jpg" class="card-img-top" alt="foto">
+                    <div class="card-body">
+                        <h5 class="card-title">Nuestra misión</h5>
+                        <p class="card-text">Nuestra misión es ofrecer bienestar ,tanto a sus mascotas como a las familias de nuestros pacientes ,entregando servicios Médicos de gran calidad. </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="~/Content/img/discus-fish-1943755.jpg" class="card-img-top" alt="foto">
+                    <div class="card-body">
+                        <h5 class="card-title">Nuestra Visión</h5>
+                        <p class="card-text">Brindarle a cada familia la oportunidad de encontrar nuestra calidad médica tan cerca como sea posible, sin importar en qué lugar se encuentre.</p>    
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="~/Content/img/raccoon-3538081_1920.jpg" class="card-img-top" alt="foto">
+                    <div class="card-body">
+                        <h5 class="card-title">Nuestro Objetivo</h5>
+                        <p class="card-text">Entregar el mejor servicio médico veterinario a cada uno de nuestros pacientes para asegurarnos de que pasen más tiempo con ustedes, en su hogar. </p>
+                    </div>
+                </div>
+            </div>
 
+        </div>
+    </div>
 
-ex</h2>
 
