--- a/Veterinaria/Veterinaria.Web/Views/Home/About.cshtml
+++ b/Veterinaria/Veterinaria.Web/Views/Home/About.cshtml
@@ -1,7 +1,38 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<div class="masthead, display1">
+    <div class="masthead-content space">
+        <div class="container">
+            <h1 class="display-1">Acerca de nosotros</h1>
 
-<p>Use this area to provide additional information.</p>
+            <p class="palabras">
+                Veterinaria TJ nace con la idea de crear una Clínica Veterinaria que se diferencie del resto por la calidad de servicio, responsabilidad y compromiso que tu engreído merece.
+                Consideramos a las mascotas como un miembro más de la familia y estamos conscientes de lo que eso representa. Es por esto que nos caracterizamos por poseer una línea ética definida y compartida por todo nuestro equipo.
+                Veterinaria TJ es sinónimo de responsabilidad, dedicación y entrega.
+            </p>
+        </div>
+    </div>
+
+    <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active" data-interval="10000">
+                <img src="~/Content/img/bernese-mountain-dog-216113.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item" data-interval="2000">
+                <img src="~/Content/img/cat-4988408.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="~/Content/img/puppy-17473.jpg" class="d-block w-100" alt="...">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+</div>
