--- a/Veterinaria/Veterinaria.Web/Views/Pets/Delete.cshtml
+++ b/Veterinaria/Veterinaria.Web/Views/Pets/Delete.cshtml
@@ -4,93 +4,99 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<div class="masthead">
+    <div class="masthead-content space">
+        <div class="container">
+            <h2>Eliminar</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Pet</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
+            <div>
+                <h4>Mascota</h4>
+                <hr />
+                <dl class="dl-horizontal">
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Name)
+                    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+                    <dd>
+                        @Html.DisplayFor(model => model.Name)
+                    </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.PetType)
-        </dt>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.PetType)
+                    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.PetType)
-        </dd>
+                    <dd>
+                        @Html.DisplayFor(model => model.PetType)
+                    </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Age)
-        </dt>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Age)
+                    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Age)
-        </dd>
+                    <dd>
+                        @Html.DisplayFor(model => model.Age)
+                    </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.BirthDate)
-        </dt>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.BirthDate)
+                    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.BirthDate)
-        </dd>
+                    <dd>
+                        @Html.DisplayFor(model => model.BirthDate)
+                    </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Color)
-        </dt>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Color)
+                    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Color)
-        </dd>
+                    <dd>
+                        @Html.DisplayFor(model => model.Color)
+                    </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Race)
-        </dt>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Race)
+                    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Race)
-        </dd>
+                    <dd>
+                        @Html.DisplayFor(model => model.Race)
+                    </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Weight)
-        </dt>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Weight)
+                    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Weight)
-        </dd>
+                    <dd>
+                        @Html.DisplayFor(model => model.Weight)
+                    </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Height)
-        </dt>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Height)
+                    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Height)
-        </dd>
+                    <dd>
+                        @Html.DisplayFor(model => model.Height)
+                    </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ImgUrl)
-        </dt>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.ImgUrl)
+                    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.ImgUrl)
-        </dd>
+                    <dd>
+                        @Html.DisplayFor(model => model.ImgUrl)
+                    </dd>
 
-    </dl>
+                </dl>
 
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
+                @using (Html.BeginForm())
+                {
+                    @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+                    <div class="form-actions no-color">
+                        <input type="submit" value="Eliminar" class="btn btn-default btn-danger" /> |
+                        @Html.ActionLink("Regresar", "Index")
+                    </div>
+                }
+            </div>
         </div>
-    }
+    </div>
 </div>
