--- a/Veterinaria/Veterinaria.Web/Views/Pets/Details.cshtml
+++ b/Veterinaria/Veterinaria.Web/Views/Pets/Details.cshtml
@@ -4,87 +4,93 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
 
-<div>
-    <h4>Pet</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
+<div class="masthead">
+    <div class="masthead-content space">
+        <div class="container">
+            <h2>Detalles</h2>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+            <div>
+                <h4>Mascota</h4>
+                <hr />
+                <dl class="dl-horizontal">
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Name)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.PetType)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.Name)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.PetType)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.PetType)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Age)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.PetType)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Age)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Age)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.BirthDate)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.Age)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.BirthDate)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.BirthDate)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Color)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.BirthDate)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Color)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Color)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Race)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.Color)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Race)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Race)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Weight)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.Race)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Weight)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Weight)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Height)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.Weight)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Height)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Height)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ImgUrl)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.Height)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.ImgUrl)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.ImgUrl)
+                    </dt>
 
-    </dl>
+                    <dd>
+                        @Html.DisplayFor(model => model.ImgUrl)
+                    </dd>
+
+                </dl>
+            </div>
+            <p>
+                @Html.ActionLink("Regresar", "Index")
+            </p>
+        </div>
+    </div>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
