--- a/Veterinaria/Veterinaria.Web/Views/Pets/Details.cshtml
+++ b/Veterinaria/Veterinaria.Web/Views/Pets/Details.cshtml
@@ -5,92 +5,61 @@
 }
 
 
-<div class="masthead">
-    <div class="masthead-content space">
-        <div class="container">
-            <h2>Detalles</h2>
-
-            <div>
-                <h4>Mascota</h4>
-                <hr />
-                <dl class="dl-horizontal">
-                    <dt>
-                        @Html.DisplayNameFor(model => model.Name)
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.Name)
-                    </dd>
-
-                    <dt>
-                        @Html.DisplayNameFor(model => model.PetType)
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.PetType)
-                    </dd>
-
-                    <dt>
-                        @Html.DisplayNameFor(model => model.Age)
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.Age)
-                    </dd>
-
-                    <dt>
-                        @Html.DisplayNameFor(model => model.BirthDate)
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.BirthDate)
-                    </dd>
-
-                    <dt>
-                        @Html.DisplayNameFor(model => model.Color)
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.Color)
-                    </dd>
-
-                    <dt>
-                        @Html.DisplayNameFor(model => model.Race)
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.Race)
-                    </dd>
-
-                    <dt>
-                        @Html.DisplayNameFor(model => model.Weight)
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.Weight)
-                    </dd>
-
-                    <dt>
-                        @Html.DisplayNameFor(model => model.Height)
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.Height)
-                    </dd>
-
-                    <dt>
-                        @Html.DisplayNameFor(model => model.ImgUrl)
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.ImgUrl)
-                    </dd>
-
-                </dl>
+<div class="row col-md-12 justify-content-between">
+    <div class="col-md-6 ">
+        <div class="card mb-3">
+            <div class="card-header py-2 bg-info">
+                <h5 class="text-center m-0 text-white">@Model.Name</h5>
             </div>
-            <p>
-                @Html.ActionLink("Regresar", "Index")
-            </p>
+            <div class="card-body">
+                <table class="table table-sm">
+                    <tr>
+                        <td>Nombre: </td>
+                        <td>@Model.Name</td>
+                    </tr>
+                    <tr>
+                        <td>Tipo de Mascota :</td>
+                        <td>@Model.PetType</td>
+                    </tr>
+                    <tr>
+                        <td>Edad : </td>
+                        <td>@Model.Age Meses</td>
+                    </tr>
+                    <tr>
+                        <td>Fecha de Nacimiento </td>
+                        <td>@Model.BirthDate.ToShortDateString()</td>
+                    </tr>
+                    <tr>
+                        <td>Raza </td>
+                        <td>@Model.Race</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-6">
+        <div class="">
+            <div class="card mb-3">
+                <div class="card-header bg-info">
+                    <h6>Fotografia</h6>
+                </div>
+                <div class="card-header">
+                    @if (Model.ImgUrl == null)
+                    {
+                        <img src="~/Content/img/userunknown.jpg" class="img-thumbnail" width="550" />
+                    }
+                    else if (Model.ImgUrl != null)
+                    {
+                        <img src="~/Content/img/@Model.ImgUrl" />
+                    }
+                </div>
+            </div>
         </div>
     </div>
 </div>
+
+
+<p>
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Back to List", "Index")
+</p>
