--- a/Veterinaria/Veterinaria.Web/Views/Shared/_Layout.cshtml
+++ b/Veterinaria/Veterinaria.Web/Views/Shared/_Layout.cshtml
@@ -10,8 +10,8 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
-        <a class="navbar-brand text-white" href="#">Veterinaria TJ</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand text-white" href="#">Veterinaria</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -26,6 +26,10 @@
                 <li class="nav-item">
                     <a class="nav-link text-white" href="@Url.Action("Contact", "Home")">Contacto</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="@Url.Action("Index", "Manage")">Cambiar Password</a>
+                </li>
+
                 @if (User.IsInRole("Admin"))
                 {
                     <li class="nav-item">
@@ -36,7 +40,7 @@
                     </li>
                 }
 
-                @if (User.IsInRole("Veterinary"))
+                @if (User.IsInRole("Veterinary") || User.IsInRole("Admin"))
                 {
                     <li class="nav-item">
                         <a class="nav-link text-white" href="@Url.Action("Index", "Consults")">Consultas</a>
@@ -47,6 +51,13 @@
                 {
                     <li class="nav-item">
                         <a class="nav-link text-white" href="@Url.Action("Index","Pets")">Mascotas</a>
+                    </li>
+
+                }
+                @if (User.IsInRole("Admin"))
+                {
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="@Url.Action("AllPets","Pets")">Mascotas</a>
                     </li>
 
                 }
