--- a/Veterinaria/Veterinaria.Web/Views/Account/Login.cshtml
+++ b/Veterinaria/Veterinaria.Web/Views/Account/Login.cshtml
@@ -45,10 +45,10 @@
                                     <span class="text-white-50"><i class="fas fa-check"></i></span>
                                     <span class="text-white"> Iniciar Sesión</span>
                                 </button>
-                                <a href="@Url.Action("Register","Account")" class="btn btn-sm btn-primary">
+                                @*<a href="@Url.Action("Register","Account")" class="btn btn-sm btn-primary">
                                     <span class="text-white-50"><i class="fas fa-plus-circle"></i></span>
                                     <span class="text-white"> Registrese</span>
-                                </a>
+                                </a>*@
                             </div>
                         </div>
                     }
