--- a/Veterinaria/Veterinaria.Web/Views/Home/About.cshtml
+++ b/Veterinaria/Veterinaria.Web/Views/Home/About.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<div class="masthead, display1">
-    <div class="masthead-content space">
+<div class="display1">
+    <div class="space">
         <div class="container">
             <h1 class="display-1">Acerca de nosotros</h1>
 
