--- a/Veterinaria/Veterinaria.Web/Views/Home/Contact.cshtml
+++ b/Veterinaria/Veterinaria.Web/Views/Home/Contact.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-    <div class="masthead, display1">
+    <div class="display1">
         <img src="~/Content/img/dog-3175810.jpg" alt="cat" class="foto" />
-        <div class="masthead-content">
+        <div>
             <div class="container">
 
 
