--- a/Veterinaria/Veterinaria.Web/Views/Pets/Edit.cshtml
+++ b/Veterinaria/Veterinaria.Web/Views/Pets/Edit.cshtml
@@ -4,8 +4,8 @@
     ViewBag.Title = "Edit";
 }
 
-<div class="masthead">
-    <div class="masthead-content space">
+<div>
+    <div class="space">
         <div class="container">
             <h2>Editar</h2>
 
