--- a/Veterinaria/Veterinaria.Web/Views/Pets/Delete.cshtml
+++ b/Veterinaria/Veterinaria.Web/Views/Pets/Delete.cshtml
@@ -4,8 +4,8 @@
     ViewBag.Title = "Delete";
 }
 
-<div class="masthead">
-    <div class="masthead-content space">
+<div>
+    <div class="space">
         <div class="container">
             <h2>Eliminar</h2>
 
