--- a/Veterinaria/Veterinaria.Web/Views/Pets/Details.cshtml
+++ b/Veterinaria/Veterinaria.Web/Views/Pets/Details.cshtml
@@ -8,7 +8,7 @@
 <div class="row col-md-12 justify-content-between">
     <div class="col-md-6 ">
         <div class="card mb-3">
-            <div class="card-header py-2 bg-info">
+            <div class="card-header py-2 bg-dark">
                 <h5 class="text-center m-0 text-white">@Model.Name</h5>
             </div>
             <div class="card-body">
@@ -40,8 +40,8 @@
     <div class="col-md-6">
         <div class="">
             <div class="card mb-3">
-                <div class="card-header bg-info">
-                    <h6>Fotografia</h6>
+                <div class="card-header bg-dark">
+                    <h6 class="text-center m-0 text-white">Fotografia</h6>
                 </div>
                 <div class="card-header">
                     @if (Model.ImgUrl == null)
