--- a/Veterinaria/Veterinaria.Web/Views/Pets/Index.cshtml
+++ b/Veterinaria/Veterinaria.Web/Views/Pets/Index.cshtml
@@ -45,8 +45,8 @@
     <div class="modal-dialog modal-lg">
 
         <div class="modal-content">
-            <div class="modal-title bg-info">
-                <h6 class="text-center">Nueva Mascota</h6>
+            <div class="modal-title bg-dark">
+                <h6 class="text-center m-0 text-white">Nueva Mascota</h6>
             </div>
             <div class="modal-body">
                 <form action="@Url.Action("Create","Pets")" method="post" enctype="multipart/form-data">
