--- a/Veterinaria/Veterinaria.Web/Views/Pets/AllPets.cshtml
+++ b/Veterinaria/Veterinaria.Web/Views/Pets/AllPets.cshtml
@@ -60,9 +60,9 @@
             </td>
 
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-default btn-success"}) |
+                @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-default btn-primary" }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-default btn-danger" })
             </td>
         </tr>
     }
