--- a/Veterinaria/Veterinaria.Web/Views/Pets/Details.cshtml
+++ b/Veterinaria/Veterinaria.Web/Views/Pets/Details.cshtml
@@ -60,6 +60,6 @@
 
 
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.Id }, new { @class = "btn btn-default btn-success" }) |
+    @Html.ActionLink("Regresar", "Index", new { id = Model.Id }, new { @class = "btn btn-default btn-primary" })
 </p>
